--- a/style.css
+++ b/style.css
@@ -1,265 +1,34 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
-    color: white;
-}
+@import url(header.css);
+@import url(utils.css);
+/* View Background Image */
 
-#lo {
-    background-color: #4D869C;
-    display: block;
-    padding: 10px;
-}
-#s {
-    background-color: #4D869C;
-    /* position: absolute; */
-    /* top: 10px; */
-    /* right: 10px; */
-    /* margin-right: 7px; */
-    display: inline-block;
-    margin-left: calc(100% - 370px);
-    color: white;
-    font-size: larger;
-    font-style: inherit;
-    font-display: none;
-
-
-}
-
-#banner {
-    width: calc(100% - 0px);
-    height: calc(100% - 50px);
+img {
     background-position: center;
     background-size: cover;
-    margin-top: 50px;
-}
-
-#back {
-    background-color: #6295A2;
-    height: 400px;
-    margin-top: -3px;
-    /* padding: 50px; */
-    position: relative;
-}
-
-a {
-    text-decoration: none;
-    margin-left: 10px;
-    margin-right: 10px;
-    
-}
-
-#Works {
-    text-align: center;
-    height: 300px;
-    width: 200px;
-    /* background-color: blue; */
-    display: inline-block;
-    /* margin-left: calc(100% - 95%); */
-    /* margin-top: -10px; */
-    margin-left: -50px;
-    position: absolute;
-    left: 25%;
-    top: 25%;
-    transform: translate(-25%, -25%)
-    
-}
-#About {
-    text-align: center;
-    height: 300px;
-    width: 200px;
-    margin-top: -25px;
-    /* background-color: blueviolet; */
-    display: inline-block;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%)
-    
-    
-}
-#Options {
-    text-align: center;
-    height: 300px;
-    width: 200px;
-    /* padding: 50px; */
-    margin-top: -50px;
-    /* margin-right: 40px; */
-    /* background-color: brown; */
-    display: inline-block;
-    /* margin-left: calc(100% - 60%); */
-    margin-left: 50px;
-    position: absolute;
-    left: 75%;
-    top: 75%;
-    transform: translate(-75%, -75%)
-
-}
-#username {
-    color: black;
-    text-decoration-color: black;
-}
-#login {
-    display: inline-block;
-}
-#form {
-    position: relative;
-    background-color: #80B9AD;
-    padding: 30px;
-    font-weight: 20;
-    display: inline-block;
+    height: auto;
     width: calc(100% - 0px);
-    height: calc(100% - 50px);
-    
-    
 }
-#forme {
-    display: inline-block;
-    margin-left: calc(100% - 70%);
-    height: 150px;
-    width: 400px;;
-    text-align: center;
-    display: inline-block;
-}
-input {
-    padding: 5px 14px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border: none;
-    text-align: center;
-    color: black;
-}
-.form-control button:hover {
-    background-color: black;
-    color: black;
-    padding: 7px 14px;
-    
-    cursor: pointer;
-    /* border: none; */
-    transition: background-color ease .9s;
-   
-    /* cursor imleç border siyah cizgi */
-}
-#phone {
-    margin-left: 32px;
-}
-button {
-    padding: 5px 14px;
-    cursor: pointer;
-    background-color: #80B9AD;
-    color: black;
-}
-#gg {
-    position: absolute;
-    top: 60px;
-    left: 30px;
-    display: inline-block;
-    
 
+#navige {
+    background-color: #526D82;
+    height: 500px;
+    display: flex;
+    width: calc(100% - 0);
+    /* justify-content: center; */
+    /* align-items: center; */
+    justify-content: space-evenly;
+    
+    
 }
-.kl {
-    background-color: #538392;
-    display: inline-block;
-    width: calc(100% - 1px);
-    /* margin-right: 60px; */
-    position: fixed;
+#yonlendirici {
+    justify-content: space-between;
+    margin: 70px;
+    padding: 20px;
+}
+p {
+    text-align: center;
+}
+h3 {
     color: white;
-    text-decoration: none;
-    z-index: 2;
-    opacity: .8;
-}
-#l {
-    display: inline-block;
-    font-style: oblique;
-    margin-left: 10px;
-}
-@media (max-width: 770px) {
-    #lo {
-        background-color: #4D869C;
-        display: block;
-        padding: 10px;
-    }
-
-    #s {
-        background-color: #4D869C;
-        /* position: absolute; */
-        /* top: 10px; */
-    /* right: 10px; */
-    /* margin-right: 7px; */
-        display: inline-block;
-        margin-left: calc(100% - 370px);
-        color: white;
-        font-size: larger;
-        font-style: inherit;
-        font-display: none;
-        /* display: flex; */
-        justify-content: center;
-        align-items: center;
-        
-
-    }
-
-    nav {
-        /* display: flex; */
-        display: inline-block;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-
-    nav a {
-        margin-bottom: 10px;
-    }
-
-    #temel > div {
-        margin-bottom: 20px;
-    }
-
-    #temel h2 {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    #temel h2 i {
-        margin-bottom: 10px;
-    }
-
-    #form form {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    #back {
-        background-color: #6295A2;
-        height: auto;
-        padding: 20px;
-    }
-
-    #Works, #About, #Options {
-        text-align: center;
-        height: auto;
-        width: 100%;
-        margin-bottom: 20px;
-        position: relative;
-        left: auto;
-        top: auto;
-        transform: none;
-    }
-    
-    #Works, #About, #Options {
-        display: block;
-        margin: 20px 0;
-    }
-    #form label,
-    #form input,
-    #form button {
-        display: block;
-        margin: 10px auto;
-        text-align: center;
-    }
-    #forme {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: 100vh;
-    }
-    
+    font-family: sans-serif;
 }
